# nushell

./: Cargo.toml  README.md  org.flatpak.Nushell.json
crates/nu-cli/: Cargo.toml
crates/nu-cli/src/: cli.rs  commands.rs  lib.rs  line_editor.rs
crates/nu-cli/src/commands/: to_html.rs  to_md.rs
crates/nu-cli/src/env/: directory_specific_environment.rs
crates/nu-cli/src/format/: table.rs
crates/nu-commands-core/: Cargo.toml
crates/nu-commands-core/src/: commands.rs
crates/nu-commands-core/src/commands/: run_external.rs
crates/nu-commands-core/tests/: main.rs
crates/nu-commands-std/: Cargo.toml
crates/nu-commands-std/src/: commands.rs  lib.rs  prelude.rs
crates/nu-commands-std/src/commands/: default_context.rs  from_ics.rs  histogram.rs
crates/nu-commands-std/src/commands/math/: median.rs  mode.rs
crates/nu-commands-std/src/commands/url_/: mod.rs
crates/nu-parser/src/: parse.rs
crates/nu-protocol/: Cargo.toml
crates/nu_plugin_fetch/: Cargo.toml
crates/nu_plugin_match/: Cargo.toml
crates/nu_plugin_post/: Cargo.toml
crates/nu_plugin_ps/: Cargo.toml
crates/nu_plugin_sys/: Cargo.toml
crates/nu_plugin_textview/: Cargo.toml
docs/sample_config/: config.toml
src/: cli.rs  context.rs  fuzzysearch.rs  main.rs  parser.rs  prelude.rs  stream.rs
src/commands/: autoview.rs  classified.rs  command.rs  enter.rs  fetch.rs  get.rs  open.rs  post.rs  save.rs
src/data/: meta.rs
src/format/: table.rs
src/parser/hir/: tokens_iterator.rs
src/parser/hir/baseline_parse/: tests.rs
src/parser/hir/syntax_shape/: block.rs
src/parser/hir/syntax_shape/expression/: unit.rs
src/parser/parse/: parser.rs  token_tree_builder.rs
src/plugins/: binaryview.rs  textview.rs
src/shell/: completer.rs  filesystem_shell.rs  help_shell.rs  helper.rs  shell.rs  shell_manager.rs  value_shell.rs
