[package]
authors = ["The Nu Project Contributors"]
description = "Nushell std lib commands"
edition = "2018"
license = "MIT"
name = "nu-commands-std"
version = "0.25.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-commands-core = {version = "0.25.2", path = "../nu-commands-core"}
nu-data = {version = "0.25.2", path = "../nu-data"}
nu-engine = {version = "0.25.2", path = "../nu-engine"}
nu-errors = {version = "0.25.2", path = "../nu-errors"}
nu-json = {version = "0.25.2", path = "../nu-json"}
nu-parser = {version = "0.25.2", path = "../nu-parser"}
nu-plugin = {version = "0.25.2", path = "../nu-plugin"}
nu-protocol = {version = "0.25.2", path = "../nu-protocol"}
nu-source = {version = "0.25.2", path = "../nu-source"}
nu-stream = {version = "0.25.2", path = "../nu-stream"}
nu-table = {version = "0.25.2", path = "../nu-table"}
nu-test-support = {version = "0.25.2", path = "../nu-test-support"}
nu-value-ext = {version = "0.25.2", path = "../nu-value-ext"}

ansi_term = "0.12.1"
arboard = {version = "1.1.0", optional = true}
async-recursion = "0.3.1"
async-trait = "0.1.40"
base64 = "0.13.0"
bigdecimal = {version = "0.2.0", features = ["serde"]}
calamine = "0.16.1"
chrono = {version = "0.4.15", features = ["serde"]}
chrono-tz = "0.5.3"
csv = "1.1.3"
dtparse = "1.2.0"
eml-parser = "0.1.0"
futures = {version = "0.3.5", features = ["compat", "io-compat"]}
futures-util = "0.3.8"
futures_codec = "0.4.1"
heim = {version = "0.1.0-rc.1", optional = true}
htmlescape = "0.3.1"
ical = "0.7.0"
indexmap = {version = "1.6.0", features = ["serde-1"]}
itertools = "0.10.0"
meval = "0.2.0"
num-bigint = {version = "0.3.0", features = ["serde"]}
num-format = {version = "0.4.0", features = ["with-num-bigint"]}
num-traits = "0.2.12"
pretty-hex = "0.2.0"
quick-xml = "0.20.0"
rand = "0.7.3"
regex = "1.3.9"
roxmltree = "0.14.0"
rust-embed = "5.8.0"
serde = {version = "1.0.115", features = ["derive"]}
serde_bytes = "0.11.5"
serde_ini = "0.2.0"
serde_json = "1.0.57"
serde_urlencoded = "0.7.0"
serde_yaml = "0.8.13"
sha2 = "0.9.1"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
titlecase = "1.0"
toml = "0.5.6"
uom = {version = "0.30.0", features = ["f64", "try-from"]}
url = "2.1.1"
uuid_crate = {package = "uuid", version = "0.8.1", features = ["v4"], optional = true}

[features]
clipboard-cli = ["arboard"]
rich-benchmark = ["heim"]
